tests/errors/unicode_identifiers_e1.pyx
# -*- coding: utf-8 -*-
# mode: error

★1 = 5 # invalid start symbol

_ERRORS = u"""
4:0: Unrecognized character
"""
